Fixing various issues like: unnecessary imports, exceptions, Table.css naming, refactoring some code